unpackaged/main/default/objects/Bank_Statements_Document__c/Bank_Statements_Document__c.object-meta.xml
<CustomObject>
    <label>Bank Statements Document</label>
    <nameField>
        <displayFormat>BSD-{00000}</displayFormat>
        <label>Bank Statements Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Statements Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>