unpackaged/main/default/objects/Bank_Statements_Document__c/fields/Bank_Statements_Processing__c.field-meta.xml
<CustomField>
    <fullName>Bank_Statements_Processing__c</fullName>
    <label>Bank Statements Processing</label>
    <referenceTo>Bank_Statements_Processing__c</referenceTo>
    <relationshipLabel>Bank Statements Documents</relationshipLabel>
    <relationshipName>Bank_Statements_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>