unpackaged/main/default/objects/Bank_Statements_Document__c/fields/Document_UUId__c.field-meta.xml
<CustomField>
    <fullName>Document_UUId__c</fullName>
    <label>Document UUId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>