unpackaged/main/default/objects/Bank_Statements_Document__c/fields/Ocrolus_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Ocrolus_Document_Id__c</fullName>
    <label>Ocrolus Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>